--- a/styles/camp/camp.module.css
+++ b/styles/camp/camp.module.css
@@ -1,5 +1,5 @@
 .contentBox {
-    margin-top: 40vh;
+    margin-top: 35vh;
     z-index: 3;
     position: relative;
     display: -webkit-box;
@@ -90,6 +90,9 @@
 
 @media (max-width: 750px) {
     .content {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
     }
 
@@ -157,20 +160,23 @@
 
 .redLineTop {
     position: absolute;
-    right: -250px;
+    right: -230px;
     height: 100vh;
+    top: calc(-100vh + 110px);
 }
 
 .blueLineTop {
     position: absolute;
     height: 100vh;
-    left: 520px;
+    left: 525px;
+    top: calc(-100vh + 110px);
 }
 
 .greenLineTop {
     position: absolute;
     left: 70px;
-    height: 100vh;
+    height: 150vh;
+    top: calc(-150vh + 110px);
 }
 
 .lineBoxTop {
